--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.karate</groupId>
-   <artifactId>org.karate.seleniumEasy</artifactId>
+   <artifactId>selfLearning</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,28 +17,22 @@
       <findbugs.check.skip>true</findbugs.check.skip>
    </properties>
    <dependencies>
-   <dependency>
-    <groupId>com.intuit.karate</groupId>
-    <artifactId>karate-apache</artifactId>
-    <version>0.9.6</version>
-    <scope>test</scope>
-</dependency>
-<dependency>
-    <groupId>com.intuit.karate</groupId>
-    <artifactId>karate-junit5</artifactId>
-    <version>0.9.6</version>
-    <scope>test</scope>
-</dependency>
+      <dependency>
+         <groupId>com.intuit.karate</groupId>
+         <artifactId>karate-junit5</artifactId>
+         <version>1.0.1</version>
+         <scope>test</scope>
+      </dependency>
       <dependency>
          <groupId>net.masterthought</groupId>
          <artifactId>cucumber-reporting</artifactId>
          <version>5.3.0</version>
       </dependency>
       <dependency>
-            <groupId>net.masterthought</groupId>
-            <artifactId>maven-cucumber-reporting</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+         <groupId>net.masterthought</groupId>
+         <artifactId>maven-cucumber-reporting</artifactId>
+         <version>2.8.0</version>
+      </dependency>
       <dependency>
          <groupId>com.googlecode.json-simple</groupId>
          <artifactId>json-simple</artifactId>
@@ -55,10 +49,10 @@
          <scope>compile</scope>
       </dependency>
       <dependency>
-    <groupId>com.jayway.jsonpath</groupId>
-    <artifactId>json-path</artifactId>
-    <version>2.2.0</version>
-</dependency>
+         <groupId>com.jayway.jsonpath</groupId>
+         <artifactId>json-path</artifactId>
+         <version>2.2.0</version>
+      </dependency>
    </dependencies>
    <build>
       <testResources>
