--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,8 @@
       <dependency>
          <groupId>net.masterthought</groupId>
          <artifactId>cucumber-reporting</artifactId>
-         <version>5.3.0</version>
-      </dependency>
-      <dependency>
-         <groupId>net.masterthought</groupId>
-         <artifactId>maven-cucumber-reporting</artifactId>
-         <version>2.8.0</version>
+         <version>5.3.1</version>
+         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>com.googlecode.json-simple</groupId>
