--- a/pom.xml
+++ b/pom.xml
@@ -1,167 +1,277 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.karate</groupId>
-   <artifactId>selfLearning</artifactId>
-   <version>1.0-SNAPSHOT</version>
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <java.version>1.8</java.version>
-      <maven.compiler.version>3.6.0</maven.compiler.version>
-      <checksyle.rule.file>code-compliances/checkstyle-rules.xml</checksyle.rule.file>
-      <findbugs.rule.file>code-compliances/findbugs_exclude_filter.xml</findbugs.rule.file>
-      <checkstyle.failure>true</checkstyle.failure>
-      <cpd.skip>true</cpd.skip>
-      <checkstyle.check.skip>true</checkstyle.check.skip>
-      <pmd.check.skip>true</pmd.check.skip>
-      <findbugs.check.skip>true</findbugs.check.skip>
-   </properties>
-   <dependencies>
-      <dependency>
-         <groupId>com.intuit.karate</groupId>
-         <artifactId>karate-junit5</artifactId>
-         <version>1.0.1</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>net.masterthought</groupId>
-         <artifactId>cucumber-reporting</artifactId>
-         <version>5.3.1</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>com.googlecode.json-simple</groupId>
-         <artifactId>json-simple</artifactId>
-         <version>1.1.1</version>
-      </dependency>
-      <dependency>
-         <groupId>com.github.javafaker</groupId>
-         <artifactId>javafaker</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>com.github.javafaker</groupId>
-         <artifactId>javafaker</artifactId>
-         <version>1.0.2</version>
-         <scope>compile</scope>
-      </dependency>
-      <dependency>
-         <groupId>com.jayway.jsonpath</groupId>
-         <artifactId>json-path</artifactId>
-         <version>2.2.0</version>
-      </dependency>
-   </dependencies>
-   <build>
-      <testResources>
-         <testResource>
-            <directory>src/main/java</directory>
-         </testResource>
-         <testResource>
-            <directory>src/test/java</directory>
-            <excludes>
-               <exclude>**/*.java</exclude>
-            </excludes>
-         </testResource>
-         <testResource>
-            <directory>src/test/resources</directory>
-            <excludes>
-               <exclude>**/*.java</exclude>
-            </excludes>
-         </testResource>
-         <testResource>
-            <directory>src/test/resources/testData/pages</directory>
-            <excludes>
-               <exclude>**/*.java</exclude>
-            </excludes>
-         </testResource>
-         <testResource>
-            <directory>src/test/resources/testData/payload</directory>
-            <excludes>
-               <exclude>**/*.java</exclude>
-            </excludes>
-         </testResource>
-      </testResources>
-      <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.version}</version>
-            <configuration>
-               <encoding>UTF-8</encoding>
-               <source>8</source>
-               <target>8</target>
-               <compilerArgument>-Werror</compilerArgument>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.1.0</version>
-            <configuration>
-               <configLocation>${checksyle.rule.file}</configLocation>
-               <failOnViolation>false</failOnViolation>
-               <encoding>UTF-8</encoding>
-               <consoleOutput>true</consoleOutput>
-               <failsOnError>${checkstyle.failure}</failsOnError>
-               <linkXRef>true</linkXRef>
-               <skip>${checkstyle.check.skip}</skip>
-            </configuration>
-            <executions>
-               <execution>
-                  <id>validate</id>
-                  <phase>validate</phase>
-                  <goals>
-                     <goal>check</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <artifactId>maven-pmd-plugin</artifactId>
-            <groupId>org.apache.maven.plugins</groupId>
-            <version>3.10.0</version>
-            <configuration>
-               <includeTests>true</includeTests>
-               <targetJdk>${jre.level}</targetJdk>
-               <printFailingErrors>true</printFailingErrors>
-               <failOnViolation>true</failOnViolation>
-               <excludeFromFailureFile>code-compliances\exclude-ip-hardcode-pmd.properties</excludeFromFailureFile>
-               <linkXRef>false</linkXRef>
-               <skip>${pmd.check.skip}</skip>
-            </configuration>
-            <executions>
-               <execution>
-                  <phase>compile</phase>
-                  <goals>
-                     <goal>pmd</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>3.0.4</version>
-            <configuration>
-               <xmlOutput>true</xmlOutput>
-               <xmlOutputDirectory>target/site</xmlOutputDirectory>
-               <failOnError>true</failOnError>
-               <excludeFilterFile>${findbugs.rule.file}</excludeFilterFile>
-               <skip>${findbugs.check.skip}</skip>
-            </configuration>
-            <executions>
-               <execution>
-                  <phase>compile</phase>
-                  <goals>
-                     <goal>check</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
-   </build>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.intuit.karate</groupId>
+		<artifactId>karate-parent</artifactId>
+		<version>1.2.0</version>
+	</parent>
+	<artifactId>karate-1.2.0</artifactId>
+	<packaging>jar</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+		<maven.compiler.version>3.6.0</maven.compiler.version>
+		<checksyle.rule.file>code-compliances/checkstyle-rules.xml</checksyle.rule.file>
+		<findbugs.rule.file>code-compliances/findbugs_exclude_filter.xml</findbugs.rule.file>
+		<checkstyle.failure>true</checkstyle.failure>
+		<cpd.skip>true</cpd.skip>
+		<checkstyle.check.skip>true</checkstyle.check.skip>
+		<pmd.check.skip>true</pmd.check.skip>
+		<findbugs.check.skip>true</findbugs.check.skip>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit5.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit5.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-junit5</artifactId>
+			<version>1.0.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.masterthought</groupId>
+			<artifactId>cucumber-reporting</artifactId>
+			<version>5.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.12</version>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<testResources>
+			<testResource>
+				<directory>src/main/java</directory>
+			</testResource>
+			<testResource>
+				<directory>src/test/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources/testData/pages</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources/testData/payload</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<source>8</source>
+					<target>8</target>
+					<compilerArgument>-Werror</compilerArgument>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>**/*TestRunner.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<configLocation>${checksyle.rule.file}</configLocation>
+					<failOnViolation>false</failOnViolation>
+					<encoding>UTF-8</encoding>
+					<consoleOutput>true</consoleOutput>
+					<failsOnError>${checkstyle.failure}</failsOnError>
+					<linkXRef>true</linkXRef>
+					<skip>${checkstyle.check.skip}</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<id>validate</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<version>3.10.0</version>
+				<configuration>
+					<includeTests>true</includeTests>
+					<targetJdk>${jre.level}</targetJdk>
+					<printFailingErrors>true</printFailingErrors>
+					<failOnViolation>true</failOnViolation>
+					<excludeFromFailureFile>code-compliances\exclude-ip-hardcode-pmd.properties</excludeFromFailureFile>
+					<linkXRef>false</linkXRef>
+					<skip>${pmd.check.skip}</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>pmd</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.4</version>
+				<configuration>
+					<xmlOutput>true</xmlOutput>
+					<xmlOutputDirectory>target/site</xmlOutputDirectory>
+					<failOnError>true</failOnError>
+					<excludeFilterFile>${findbugs.rule.file}</excludeFilterFile>
+					<skip>${findbugs.check.skip}</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-pmd-plugin
+										</artifactId>
+										<versionRange>
+											[3.10.0,)
+										</versionRange>
+										<goals>
+											<goal>pmd</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											findbugs-maven-plugin
+										</artifactId>
+										<versionRange>
+											[3.0.4,)
+										</versionRange>
+										<goals>
+											<goal>check</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-checkstyle-plugin
+										</artifactId>
+										<versionRange>
+											[3.1.0,)
+										</versionRange>
+										<goals>
+											<goal>check</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
