--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>karate-parent</artifactId>
 		<version>1.2.0</version>
 	</parent>
-	<artifactId>karate-1.2.0</artifactId>
+	<artifactId>karate-framework</artifactId>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
